--- a/api/package.json
+++ b/api/package.json
@@ -1,36 +1,21 @@
 {
-  "name": "api",
+  "name": "api_rest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
-    "nodemon": "nodemon -L",
-    "test": "mocha -w ./tests/**/*.spec.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "author": "MHD",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "engines": {
-    "node": ">=12.18.3",
-    "npm": ">=6.14.6"
-  },
   "dependencies": {
-    "axios": "^0.27.2",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.18.1",
-    "mercadopago": "^1.5.14",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.6",
-    "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1",    
-    "supertest": "^6.0.1",
-    "supertest-session": "^4.1.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.7.5",
+    "multer": "^1.4.5-lts.1"
   }
 }
